--- a/index.html
+++ b/index.html
@@ -12,36 +12,12 @@
     <h1>Lista De Tarefas</h1>
     <header>
         <input id="inputTarefa" type="text" placeholder="Digite sua Tarefa">
-        <button class="add">Adicionar</button>
+        <button onclick="addTarefa()" id="btn-add"class="add">Adicionar</button>
     </header>
-    <main id="areaLista">
-        <div class="item">
-            <div class="item-icone">
-                <i class="mdi mdi-circle-outline"></i>
-            </div>
-            <div class="item-nome">
-                Teste de Tarefa
-            </div>
-            <div class="item-botao">
-                <button class="delete"><i class="mdi mdi-delete"></i>Deletar</button>
-            </div>
-        </div>
-        <div class="item clicado">
-            <div class="item-icone">
-                <i class="mdi mdi-check-circle"></i>
-            </div>
-            <div class="item-nome">
-                Teste de Tarefa
-            </div>
-            <div class="item-botao">
-                <button class="delete"><i class="mdi mdi-delete"></i>Deletar</button>
-            </div>
-        </div>
+    <main id="areaLista"> 
     </main>
         
   
-    
-
     <script src="js/controle.js"></script>
 </body>
 </html>
